[package]
name = "log-once"
version = "0.1.1"
authors = ["Luthaf <luthaf@luthaf.fr>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/Luthaf/log-once"
homepage = "https://github.com/Luthaf/log-once"
documentation = "https://docs.rs/log-once/"
description = """
Collection of helper macros for logging some events only once.
"""

[dependencies]
log = "0.3"

[dev-dependencies]
lazy_static = "0.2"
